tests/invalid/range_non_int_arg/main.py
x: list[int] = [i for i in range(1.0, 5.0)]
